OtusMicroServices/OtusDockerHomework/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-app-deployment
  labels:
    app: micro-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: micro-app
  template:
    metadata:
      labels:
        app: micro-app
    spec:
      containers:
        - name: micro-app
          image: barikman/otus_micro_services:otus_docker_homework
          ports:
            - name: micro-app
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              port: 8000
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
