OtusMicroServices/OtusDockerHomework/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro-app-service
spec:
  selector:
    app: micro-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: micro-app
  type: ClusterIP
