OtusMicroServices/OtusDockerHomework/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/health/?$ /health break;
      rewrite ^/otusapp/([A-Za-z]+)/.* /health break;
spec:
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: micro-app-service
                port:
                  number: 8000
